# spin-leptos-investigation

./: .gitignore  Cargo.toml  README.md  spin.toml
__site/pkg/: what_could_go_wrong.js
src/: app.rs  lib.rs  main.rs  serve.rs  spleppy.rs
