[package]
name = "what-could-go-wrong"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
futures = "0.3.29"
http = "0.2"
leptos = { version = "0.5" }
leptos_integration_utils = { version = "0.5.2", optional = true }
leptos_meta = { version = "0.5" }
leptos_router = { version = "0.5" }
routefinder = { version = "0.5.3", optional = true }
serde = "1.0.192"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main", optional = true }
url = "2.4.1"
wasm-bindgen = { version = "=0.2.88", optional = true }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:spin-sdk",
  "dep:routefinder",
  "dep:leptos_integration_utils"
]
