[package]
name = "what-could-go-wrong"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
futures = "0.3.29"
http = "0.2"
leptos = { path = "../../../github/leptos/leptos" }
leptos_integration_utils = { path = "../../../github/leptos/integrations/utils", optional = true }
leptos_meta = { path = "../../../github/leptos/meta" }
leptos_router = { path = "../../../github/leptos/router" }
routefinder = { version = "0.5.3", optional = true }
serde = "1.0.192"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1", optional = true }
url = "2.4.1"
wasm-bindgen = { version = "0.2", optional = true }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:spin-sdk",
  "dep:routefinder",
  "dep:leptos_integration_utils"
]

# Because cargo leptos performs SORCERY on the Wasm and we need this
# to make cargo leptos work

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "what_could_go_wrong"
style-file = "style/main.scss"

bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
